--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./letter-m.png">
-  <title>Js Example</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Js Patten Example</title>
 
 </head>
 
